Add openAPI annotation for logout, getUser, activateUser, createPasswordResetToken, findPasswordResetToken, resetPassword
